major pigman refactor
no need for multple files...